from Entidade import Entidade

class Bebida(Entidade):

    descricao = ["preco", "capacidade"]
    
    def __init__(self):
       pass